--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ body {
   background-color: rgb(13,7,30);
 }
 
+.jumbotron {
+  background-image: url("https://pacdn.500px.org/1528897/14329cd495d2a55ed949a0b9bd0481527e915c20/cover_2048.jpg?3");
+  height: 400px;
+  background-position: bottom center;
+}
+
 .navigation {
   height: auto;
   text-align: center;
@@ -18,15 +24,6 @@ body {
   position: relative;
   top: 220px;
   width: 80%;
-}
-
-.content-header {
-  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-6/htmlcss1-img_burgerphoto.jpeg");
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  top: -50%;
-  height:320px;
 }
 
 .navigation  {
