--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
 }
 
 .jumbotron {
-  background-image: url("http://www.blogto.com/upload/2015/11/20151111-brx1.jpg");
-  height: 400px;
+  background-image: url("https://pacdn.500px.org/1528897/14329cd495d2a55ed949a0b9bd0481527e915c20/cover_2042.jpg?3");
+  width: 100%
   background-position: bottom center;
 }
 
