--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
 
 .jumbotron {
   background-image: url("https://pacdn.500px.org/1528897/14329cd495d2a55ed949a0b9bd0481527e915c20/cover_2042.jpg?3");
+  height: 800px;
   width: 100%;
   background-position: bottom center;
 }
