--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 
 .navigation  {
   font-family: monospace;
+  font-size: 2em;
   font-weight: bold;
   font-style: normal;
   color: #3fabf5;
