--- a/style.css
+++ b/style.css
@@ -4,9 +4,7 @@ body {
 
 .jumbotron {
   background-image: url("https://pacdn.500px.org/1528897/14329cd495d2a55ed949a0b9bd0481527e915c20/cover_2048.jpg?3");
-  height: 600px;
-  width: 100%;
-  background-position: center;
+  background-size: cover;
 }
 
 .jumbotron h1 {
@@ -30,4 +28,10 @@ body {
   border-radius:2px;
   padding: 20px;
   margin: 20px;
+}
+
+.main h1 {
+  position: relative;
+  top: 180px;
+  text-align: centre;
 }
