--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 .jumbotron {
   background-image: url("https://pacdn.500px.org/1528897/14329cd495d2a55ed949a0b9bd0481527e915c20/cover_2048.jpg?3");
   background-size: cover;
+  height: 800px;
 }
 
 .jumbotron h1 {
