--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ body {
   background-image: url("https://pacdn.500px.org/1528897/14329cd495d2a55ed949a0b9bd0481527e915c20/cover_2048.jpg?3");
   background-size: cover;
   height: 800px;
-  top: -55px;
+  top: -70;
+  right: -10px;
+  left: -10px;
 }
 
 .navigation {
